[tool.poetry]
name = "naverworkskit"
version = "0.0.1"
description = ""
authors = ["RektPunk <rektpunk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pyjwt = "^2.10.1"
cryptography = "^44.0.3"
requests = "^2.32.3"
httpx = "^0.28.1"
retry = "^0.9.2"
pydantic-settings = "^2.9.1"
openai = "^1.77.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
